Start of Tadukoo Java (and Java 15)
- Start of Tadukoo Java (Issue #4)
- Updated to Java 15 (Issue #5) - this caused some changes for Tadukoo JSON due to preview features